# kiba_tutorials

./: README.md
kiba_control/: CMakeLists.txt  package.xml  setup.py
kiba_control/config/: control.yaml  ur5.rviz
kiba_control/include/kiba_control/: kiba_hw_sim.hpp  kinematics_planner.hpp  utils.hpp
kiba_control/launch/: control.launch
kiba_control/nodes/: kinematics_planner.py
kiba_control/src/: interactive_marker_bridge.cpp  kinematics_planner.cpp  sim_hw_main.cpp
kiba_control/src/kiba_control/: kinematics_planner.py
kiba_msgs/: CMakeLists.txt  package.xml
kiba_msgs/action/: Move.action  MoveAndGetFk.action
kiba_msgs/msg/: CubicSpline.msg
kiba_msgs/srv/: GenerateTrajectory.srv
kiba_trajectory/: CMakeLists.txt  package.xml
kiba_trajectory/include/kiba_trajectory/: conversions.hpp  datatypes.hpp  kiba_trajectory.hpp
kiba_trajectory/launch/: move.launch
kiba_trajectory/src/: trajectory_executive.cpp  trajectory_generator.cpp
kiba_trajectory/test/kiba_trajectory/: conversions.cpp  spline.cpp
my_adder/: CMakeLists.txt  package.xml
my_adder/include/my_adder/: my_adder.hpp
my_adder/src/: my_adder.cpp
my_adder/test/my_adder/: my_adder.cpp
my_first_pkg/: CMakeLists.txt  package.xml
my_first_pkg/launch/: two_nums.launch
my_first_pkg/src/: my_first_node.cpp
perception_io_example/: CMakeLists.txt  package.xml
perception_io_example/src/: compressed_image_subscriber_example.cpp  image_subscriber_example.cpp  simple_pc_publisher.cpp  simple_pc_subscriber.cpp
urdf_kiba_example/: CMakeLists.txt  package.xml
urdf_kiba_example/launch/: display.launch
urdf_kiba_example/rviz/: urdf.rviz
urdf_kiba_example/urdf/: myfirst.urdf
