<?xml version="1.0"?>
<package>
  <name>kiba_control</name>
  <version>0.0.0</version>
  <description>The kiba_control package</description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <!-- TODO: add license -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ros_control_boilerplate</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>kdl_parser</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>ros_control_boilerplate</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>kdl_parser</run_depend>

  <run_depend>rviz</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>ur_description</run_depend>

</package>
