<?xml version="1.0"?>
<package>
  <name>kiba_trajectory</name>
  <version>0.0.0</version>
  <description>
    Library and ROS nodes to create trajectories using cubic splines.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>kiba_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kiba_msgs</run_depend>
  <test_depend>gtest</test_depend>
</package>
