<?xml version="1.0"?>
<package>
  <name>my_adder</name>
  <version>0.0.0</version>
  <description>The my_adder package</description>

  <maintainer email="georg@todo.todo">georg</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
