<?xml version="1.0"?>
<package>
  <name>my_first_pkg</name>
  <version>0.0.0</version>
  <description>
    A package to demonstrate ROS basics to the KIBA students.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
