<?xml version="1.0"?>
<package>
  <name>urdf_kiba_example</name>
  <version>0.0.0</version>
  <description>The urdf_test package</description>

  <maintainer email="balintbe@cs.uni-bremen.de">Ferenc Balint-Benczedi</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
